--- a/Flask app/static/main.css
+++ b/Flask app/static/main.css
@@ -1,3 +1,23 @@
 h1 {
     color: black;
 }
+
+
+.sidebar {
+    position: fixed;
+    top: 5.1rem;
+    bottom: 3.5rem;
+    left: 0;
+    display: block;
+    overflow-x: hidden;
+    overflow-y: auto
+}
+
+.maindiv {
+    position: relative;
+    display: block;
+}
+
+#map {
+    height: 100%;
+}
