--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -48,8 +48,10 @@
                 <div class="row">
                     <div class="contianer w-100">
                         <div class="row">
-                            <div class="col-7 col-md-8 col-xl-9" style="background-color: aqua" id="map">
-                                <h1>Map here</h1>
+                            <div class="col-7 col-md-8 col-xl-9" style="background-color: aqua">
+                                <div class="contianer w-100" id="map">
+                                    <h1>Map here</h1>
+                                </div>
                             </div>
                             <div class="col-5 col-md-4 col-xl-3" style="background-color: maroon">
                                 <h1>Journey Planner</h1>
