--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -54,20 +54,21 @@
                                 </div>
                             </div>
                             <div class="col-5 col-md-4 col-xl-3" style="background-color: maroon">
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
-                                <h1>Journey Planner</h1>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-2"><strong>From:</strong></div>
+                                        <div class="col-5"><select id="from"></select></div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-2"><strong>To: </strong></div>
+                                        <div class="col-5"><select id="to"></select></div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <button type="button" class="btn btn-primary" onclick="buildURL()">Submit</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -89,6 +90,21 @@
         </div>
     </nav>
     <script type="text/javascript">
+        var from = document.getElementById("from");
+        var to = document.getElementById("to");
+        var stands = [];
+
+        {% for i in statinfo %}
+            stands.push({lat:{{ i[-2] }},
+                        lng:{{ i[-1] }},
+                        address:"{{ i[1] }}"});
+        {% endfor %}
+
+        for (let i of stands) {
+            from.innerHTML += '<option value="' + i.lat + ',' + i.lng + '">' + i.address + '</option>';
+            to.innerHTML += '<option value="' + i.lat + ',' + i.lng + '">' + i.address + '</option>';
+        }
+         
         function initMap() {
 
             radius = 20, zoom = 14;
@@ -132,6 +148,13 @@
 
             }
 
+        }
+        function buildURL(){
+            var origin = document.getElementById('from').value.split(',');
+            var dest = document.getElementById('to').value.split(',');
+            var url = "/index/route?tolat="+dest[0]+"&tolong="+dest[1];
+            url += "&fromlat="+origin[0]+"&fromlong="+origin[1];
+            window.location = url;
         }
     </script>
     <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5ydZwuT-hJt9fmBA5_sHnIWeE3JgvjCY&callback=initMap"  async defer ></script>
