--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -18,17 +18,19 @@
 <script type="text/javascript">
     var stands = [];
     {% for i in statinfo %}
-        stands.push({lat:{{ i[-2] }},
-        lng:{{ i[-1] }},
-        address:"{{ i[1] }}",
-        number:{{ i[0] }},
-        status:"{{ i[2] }}",
-        free_bikes:{{ i[4] }},
-        free_stands:{{ i[3] }},
-        weather_img:"{{ i[6] }}",
-        weather_type:"{{ i[5] }}",
-        temp:{{ '%.2f'%(i[7] - 273.15) }},
-        feels_like:{{ '%.2f'%(i[8] - 273.15) }}});
+    stands.push({lat:{{ i[-2] }},
+                lng:{{ i[-1] }},
+                address:"{{ i[1] }}",
+                number:{{ i[0] }},
+                status:"{{ i[2] }}",
+                free_bikes:{{ i[4] }},
+                free_stands:{{ i[3] }},
+                weather_img:"{{ i[6] }}",
+                weather_type:"{{ i[5] }}",
+                temp:{{ '%.2f'%(i[7] - 273.15) }},
+                feels_like:{{ '%.2f'%(i[8] - 273.15) }},
+                banking:"{{ i[10] }}",
+                bonus:"{{ i[11] }}"});
     {% endfor %}
     function load(){
         var from = document.getElementById("from");
