--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -137,7 +137,7 @@
 
                                     <!-- clock widget goes here -->
                                     <div class="row">
-                                        <div class="container w-100" id="clockWidget" style="background-image: url('/static/weather_gifs/default_weather.gif');">
+                                        <div class="container w-100" id="clockWidget">
                                             <script src="/static/clockWidget.js" ></script>
                                             <div class="row">
                                                 <span id="clock-date"></span>
@@ -162,14 +162,13 @@
                                             <script>
                                                 // directory where weather gifs are stored
                                                 var gifsPath = "{{ url_for('static', filename='weather_gifs/') }}";
-                                                console.log(gifsPath);
                                                 //call updateClock() every 1000 milliseconds
                                                 updateClock();
                                                 setInterval(updateClock, 1000);
 
                                                 //call updateWeather() every 30000 milliseconds
-                                                updateWeather();
-                                                setInterval(updateWeather, 30000);
+                                                updateWeather(gifsPath);
+                                                setInterval(updateWeather(gifsPath), 30000);
                                             </script>
                                         </div>
                                     </div>
