--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -223,9 +223,12 @@
 
                     </div>
                     <div class="col-6 col-md-7 col-xl-7 ml-auto" style="background-color: aqua">
-                        <div class="row" style="background-color: green">
-                            <!--put in bike tred related information here-->
+                        <div class="row" style="background-color: white">
+                            <!--put in bike trend related information here-->
                             <h2> Bikes Trend </h2>
+                            <script src="{{ url_for('static', filename='/jsModules/chart.js/dist/Chart.js') }}"></script>
+                            <canvas id="bikesByDay" width="100%" height="25%"></canvas>
+                            <script src="{{ url_for('static', filename='testChart.js') }}" ></script>
                         </div>
                         <div class="row" style="background-color: yellow">
                             <!--put in weather related information here-->
