--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -228,7 +228,7 @@
                             <h2> Bikes Trend </h2>
                             <script src="{{ url_for('static', filename='/jsModules/chart.js/dist/Chart.js') }}"></script>
                             <canvas id="bikesByDay" width="100%" height="25%"></canvas>
-                            <script src="{{ url_for('static', filename='testChart.js') }}" ></script>
+                            <script src="{{ url_for('static', filename='chartWidget.js') }}" ></script>
                         </div>
                         <div class="row" style="background-color: yellow">
                             <!--put in weather related information here-->
