--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -136,7 +136,7 @@
                                     <h4><strong>Station ID:</strong></h4>
                                 </div>
                                 <div class="col-5 col-md-4 col-lg-4 col-xl-5 ml-auto">
-                                    <h4>{{line[0]}}</h4>
+                                    <h4 id="stationIdForCharts">{{line[0]}}</h4>
                                 </div>
                             </div>
                             <div class="row">
@@ -223,18 +223,23 @@
 
                     </div>
                     <div class="col-6 col-md-7 col-xl-7 ml-auto" style="background-color: aqua">
+
+                        <!-- link js module containing tools for drawing charts -->
+                        <script src="{{ url_for('static', filename='/jsModules/chart.js/dist/Chart.js') }}"></script>
+                        <!-- link js functions to request data & draw charts-->
+                        <script src="{{ url_for('static', filename='chartWidget.js') }}" ></script>
+                        <script>
+                            chartMain(stands[0].number);
+                        </script>
                         <div class="row" style="background-color: white">
-                            <!--put in bike trend related information here-->
-                            <h2> Bikes Trend </h2>
-                            <div class="col-2"><strong>Select Day: </strong></div>
-                            <div class="col-5"><select id="weekDays"></select></div>
-                            <script src="{{ url_for('static', filename='/jsModules/chart.js/dist/Chart.js') }}"></script>
-                            <canvas id="bikesByDay" width="100%" height="25%"></canvas>
-                            <script src="{{ url_for('static', filename='chartWidget.js') }}" ></script>
+                            <h2> Free Bikes & Stands by Hour</h2>
+                            <div class="col-7" id="bikesByHourBtns"></div>
+                            <canvas id="bikesByHour" width="100%" height="25%"></canvas>
+
                         </div>
                         <div class="row" style="background-color: yellow">
-                            <!--put in weather related information here-->
-                            <h2> Weather Forecast </h2>
+                            <h2> Station Traffic by Day </h2>
+                            <canvas id="bikesByWeekday" width="100%" height="25%"></canvas>
                         </div>
                     </div>
                 </div>
