--- a/Flask app/templates/index.html
+++ b/Flask app/templates/index.html
@@ -57,7 +57,7 @@
 
             addMarkers({
             coords:{lat:i.lat,lng:i.lng},
-            content:'<h4>Station Number: '+i.number+'</h4><h4>Address: '+i.address+'</h4><h4>Status: '+i.status+'</h4><h4>Available Stands: '+i.free_stands+'</h4><h4>Available Bikes: '+i.free_bikes+'</h4><h4>Temperature: '+i.temp+'</h4><h4>Feels Like: '+i.feels_like+'</h4><img src="http://openweathermap.org/img/wn/'+i.weather_img+'@2x.png" alt="'+i.weather_type+'">',
+            content:'<h6>Station Number: '+i.number+'</h6><h6>Address: '+i.address+'</h6><h6>Status: '+i.status+'</h6><h6>Available Stands: '+i.free_stands+'</h6><h6>Available Bikes: '+i.free_bikes+'</h6><h6>Temperature: '+i.temp+'</h6><h6>Feels Like: '+i.feels_like+'</h6><img src="http://openweathermap.org/img/wn/'+i.weather_img+'@2x.png" alt="'+i.weather_type+'">',
             pin: i.free_bikes
             });
 
@@ -104,7 +104,7 @@
 
 <body onload="load()">
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: rgba(8, 76, 85, 1);">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: rgba(42, 42, 46, 1)">
         <a class="navbar-brand" href="#">
             <h1><strong>dublinbikes</strong></h1>
         </a>
@@ -134,12 +134,12 @@
                 <div class="row">
                     <div class="contianer w-100">
                         <div class="row">
-                            <div class="col-7 col-md-8 col-xl-9" style="background-color: aqua">
+                            <div class="col-7 col-md-8 col-xl-9" style="background-color: rgba(237, 237, 238, 1)">
                                 <div class="container w-100" id="map">
                                     <h1>Map here</h1>
                                 </div>
                             </div>
-                            <div class="col-5 col-md-4 col-xl-3" style="background-color: maroon">
+                            <div class="col-5 col-md-4 col-xl-3" style="background-color: rgba(237, 237, 238, 1)">
                                 <div class="container w-100">
 
                                     <!-- clock widget goes here -->
@@ -166,7 +166,7 @@
 
                                             <div class="row">
                                                 <span class="display-4">
-                                                    <small  id="clock-weatherDescription"></small>
+                                                    <small id="clock-weatherDescription"></small>
                                                 </span>
                                             </div>
 
@@ -194,7 +194,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
-                                            <button type="button" class="btn btn-primary" onclick="buildURL()">Submit</button>
+                                            <button type="button" class="btn btn-primary" onclick="buildURL()" style="background-color: rgba(42, 42, 46, 1); border: none">Submit</button>
                                         </div>
                                     </div>
                                 </div>
@@ -208,13 +208,13 @@
         </div>
     </div>
 
-    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light" id="bottomnav" style="background-color: #e3f2fd;">
+    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light" id="bottomnav" style="background-color: rgba(42, 42, 46, 1)">
         <div class="container">
             <div class="row w-100">
                 <div class="col">
                 </div>
                 <div class="col">
-                    <p class="text-center text-muted"><strong>Team 14</strong></p>
+                    <p class="text-center text-muted"><strong style="color: rgba(237, 237, 238, 1)">Team 14</strong></p>
                 </div>
                 <div class="col"></div>
             </div>
