--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -83,9 +83,9 @@
     
 </script>
 <body onload="load()">
-    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: rgba(42, 42, 46, 1)">
         <a class="navbar-brand" href="#">
-            <h1><strong>Dublin Bikes</strong></h1>
+            <h1><strong>dublinbikes</strong></h1>
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -120,17 +120,17 @@
                 </nav>
             </div>
 
-            <main class="col-12 col-md-10 col-xl-10 ml-auto maindiv" role="main" style="background-color: #ff1111;">
+            <main class="col-12 col-md-10 col-xl-10 ml-auto maindiv" role="main" style="background-color: rgba(237, 237, 238, 1)">
                 <div class="row">
-                    <div class="col-6 col-md-5 col-xl-5" style="background-color: aqua" id=station_info>
+                    <div class="col-6 col-md-5 col-xl-5" style="background-color: rgba(237, 237, 238, 1)" id=station_info>
                         <!--put in station information related Items here-->
 <!--
                         {% if stat_info == "none" %}
                         <h2 style="font-size: 1em"> Station Information </h2>
                         {% else %}
                         {% for line in stat_info %}
-                        <h1><strong> Station Information </strong></h1>
-                        <div class="container w-100" style="background-color: brown">
+                        <h2><strong> Station Information </strong></h2>
+                        <div class="container w-100">
                             <div class="row">
                                 <div class="col-5 col-sm-3 col-md-3 col-lg-4 col-xl-5">
                                     <h4><strong>Station ID:</strong></h4>
@@ -245,13 +245,13 @@
 
 
 
-    <nav class=" navbar fixed-bottom navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class=" navbar fixed-bottom navbar-expand-lg navbar-light" style="background-color: rgba(42, 42, 46, 1)">
         <div class="container">
             <div class="row w-100">
                 <div class="col">
                 </div>
                 <div class="col">
-                    <p class="text-center text-muted"><strong>Team 14</strong></p>
+                    <p class="text-center text-muted"><strong style="color: rgba(237, 237, 238, 1)">Team 14</strong></p>
                 </div>
                 <div class="col"></div>
             </div>
