--- a/Flask app/templates/routeindex.html
+++ b/Flask app/templates/routeindex.html
@@ -18,15 +18,15 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: rgba(42, 42, 46, 1)">
         <a class="navbar-brand" href="#">
-            <h1><strong>Dublin Bikes</strong></h1>
+            <h1><strong>dublinbikes</strong></h1>
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="navbar-collapse collapse" id="navbarColor03" style="">
+        <div class="navbar-collapse collapse" id="navbarColor03" style="background-color: rgba(42, 42, 46, 1)">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="/index">
@@ -54,13 +54,13 @@
         </div>
     </div>
 
-    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light" style="background-color: rgba(42, 42, 46, 1)">
         <div class="container">
             <div class="row w-100">
                 <div class="col">
                 </div>
                 <div class="col">
-                    <p class="text-center text-muted"><strong>Team 14</strong></p>
+                    <p class="text-center text-muted"><strong style="color: rgba(237, 237, 238, 1)">Team 14</strong></p>
                 </div>
                 <div class="col"></div>
             </div>
@@ -114,8 +114,8 @@
                     
                     addMarkers({
                         coords:{lat:i.lat,lng:i.lng},
-                        content:'<h4>Station Number: '+i.number+'</h4><h4>Address: '+i.address+'</h4><h4>Status: '+i.status+'</h4><h4>Available Stands: '+i.free_stands+'</h4><h4>Available Bikes: '+i.free_bikes+'</h4><h4>Temperature: '+i.temp+'</h4><h4>Feels Like: '+i.feels_like+'</h4><img src="http://openweathermap.org/img/wn/'+i.weather_img+'@2x.png" alt="'+i.weather_type+'">'
-                        <!--iconImage:''-->
+                        content:'<h4>Station Number: '+i.number+'</h4><h4>Address: '+i.address+'</h4><h4>Status: '+i.status+'</h4><h4>Available Stands: '+i.free_stands+'</h4><h4>Available Bikes: '+i.free_bikes+'</h4><h4>Temperature: '+i.temp+'</h4><h4>Feels Like: '+i.feels_like+'</h4><img src="http://openweathermap.org/img/wn/'+i.weather_img+'@2x.png" alt="'+i.weather_type+'">',
+                        pin: i.free_bikes
                         });
                    }
             }
@@ -141,7 +141,7 @@
             function addMarkers(prop){
             var marker = new google.maps.Marker({
                 position : prop.coords,
-                map : map
+                map : map,
             });
 
             <!--if clause to find availability to change icon colour here?-->
@@ -152,6 +152,14 @@
                 var infoWindow = new google.maps.InfoWindow({
                 content : prop.content
                 });
+
+            if (prop.pin >= 13){
+                    marker.setIcon('/static/pin_green.png')
+                } else if (prop.pin < 13 && prop.pin > 5) {
+                    marker.setIcon('/static/pin_amber.png')
+                } else if (prop.pin <= 5) {
+                    marker.setIcon('/static/pin_red.png')
+                }
 
             }
 
