--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -228,9 +228,7 @@
                         <script src="{{ url_for('static', filename='/jsModules/chart.js/dist/Chart.js') }}"></script>
                         <!-- link js functions to request data & draw charts-->
                         <script src="{{ url_for('static', filename='chartWidget.js') }}" ></script>
-                        <script>
-                            chartMain(stands[0].number);
-                        </script>
+
                         <div class="row" style="background-color: white">
                             <h2> Free Bikes & Stands by Hour</h2>
                             <div class="col-7" id="bikesByHourBtns"></div>
@@ -241,6 +239,11 @@
                             <h2> Station Traffic by Day </h2>
                             <canvas id="bikesByWeekday" width="100%" height="25%"></canvas>
                         </div>
+
+                        <script>
+                            getChartData(stands[0].number, chartMain);
+                        </script>
+
                     </div>
                 </div>
             </main>
