--- a/Flask app/templates/info.html
+++ b/Flask app/templates/info.html
@@ -234,6 +234,12 @@
                             <div class="col-7" id="bikesByHourBtns"></div>
                             <canvas id="bikesByHour" width="100%" height="25%"></canvas>
 
+                            <!-- Rectangular switch for selecting between COVID & non-COVID Data-->
+                            <label class="switch">
+                                <input id="showCovidDataSwitch" type="checkbox" onclick="changeHourlyGraph(dayNum)">
+                                <span class="slider"></span>
+                            </label>
+
                         </div>
                         <div class="row" id="bikesByWeekdayDiv" style="background-color: yellow">
                             <h2> Station Traffic by Day </h2>
