--- a/Flask app/templates/index2.html
+++ b/Flask app/templates/index2.html
@@ -121,10 +121,10 @@
 
 <body onload="load()">
      <div class="header">
-          <a href="#default" class="logo">dublinbikes</a>
+          <a href="index" class="logo">dublinbikes</a>
           <div class="header-right">
-            <a href="#contact">Info</a>
-            <a href="#about">Map</a>
+            <a href="info">Info</a>
+            <a href="index">Map</a>
           </div>
      </div>
 
