--- a/Flask app/static/main2.css
+++ b/Flask app/static/main2.css
@@ -1,3 +1,14 @@
+html {
+    font-size: 16px;
+
+    @media screen and (min-width: 900px){
+        font-size: 18px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 20px;
+    }
+}
 
 body {
     background-colour: rgba(273, 273, 238, 1);
@@ -46,10 +57,11 @@ button {
     width: 100%;
     height: 100%;
     margin: auto;
+    background-color: aqua;
 }
 
 #map {
-    height: 39rem;
+    height: 55rem;
     width: 75%;
     float: left;
 }
@@ -182,7 +194,7 @@ footer {
     opacity: .8;
     background-size: cover;
     text-align: center;
-    height: 39rem;
+    height: 55rem;
     width: 25%;
     float: right;
 }
@@ -211,4 +223,22 @@ button {
     color: rgba(237, 237, 238,1);
     border: .5px solid gray;
     background-color: rgba(42, 42, 46, 1);
+}
+
+/*Info page css*/
+
+/*List of stations*/
+.sidebar {
+    position: fixed;
+    top: 5.1rem;
+    bottom: 3.5rem;
+    left: 0;
+    display: block;
+    overflow-x: hidden;
+    overflow-y: auto
+}
+
+.maindiv {
+    position: relative;
+    display: block;
 }
