--- a/Flask app/templates/index2.html
+++ b/Flask app/templates/index2.html
@@ -39,8 +39,11 @@
 
     function initMap() {
         var prev_iw = false;
-
-        radius = 20, zoom = 13.5;
+        var loc;
+        var pos;
+        var from = document.getElementById("from");
+        var to = document.getElementById("to");
+        radius = 20, zoom = 14;
 
         var location = {lat: 53.3498, lng: -6.2603};
         var map = new google.maps.Map(document.getElementById("map"), {
@@ -48,7 +51,44 @@
         center : location
         });
 
-        <!--add markers-->
+
+<!--adding you are here info window - reference: google documentation-->
+        loc = new google.maps.InfoWindow;
+
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+            loc.setPosition(pos);
+            loc.setContent('You are here!');
+            loc.open(map);
+            map.setCenter(pos);
+            addMyLoc(pos);
+          }, function() {
+            handleLocationError(true, loc, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, loc, map.getCenter());
+        }
+
+<!--adding user location to starting point drop down-->
+        function addMyLoc(position) {
+            from.innerHTML += '<option value="' + position.lat + ',' + position.lng + '">My location</option>';
+        }
+
+<!--error handling function for geolocation-->
+        function handleLocationError(browserHasGeolocation, loc, pos) {
+            loc.setPosition(pos);
+            loc.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+            loc.open(map);
+        }
+
+<!--add station markers-->
 
         for (let i of stands) {
 
@@ -66,14 +106,14 @@
                 map : map
             });
 
-
-            <!--add bike info windows-->
+<!--add station info windows-->
 
             if(prop.content){
                 var infoWindow = new google.maps.InfoWindow({
                 content : prop.content
                 });
 
+<!--colour changing pins-->
             if (prop.pin >= 13){
                     marker.setIcon('/static/pin_green.png')
                 } else if (prop.pin < 13 && prop.pin > 5) {
@@ -84,6 +124,7 @@
 
             }
 
+<!--toggling for station info windows-->
             google.maps.event.addListener(marker, 'click', function() {
                 if (prev_iw) {
                     prev_iw.close();
@@ -120,30 +161,17 @@
 </script>
 
 <body onload="load()">
-     <div class="header">
-          <a href="#default" class="logo">dublinbikes</a>
-          <div class="header-right">
-            <a href="#contact">Info</a>
-            <a href="#about">Map</a>
-          </div>
-     </div>
+    <div class="header">
+        <a href="#default" class="logo">dublinbikes</a>
+        <div class="header-right">
+            <a href="index2">Map</a>
+            <a href="info">Info</a>
+        </div>
+    </div>
 
-<!--    <header>-->
-<!--        <nav class="navbar">-->
-<!--            <ul>-->
-<!--                <li><a class="active" href=""><h1>dublinbikes</h1></a></li>-->
-<!--                <li><a class="active" href=""><h5>map</h5></a></li>-->
-<!--                <li><a class="active" href=""><h5>info</h5></a></li>-->
-
-<!--            </ul>-->
-<!--        </nav>-->
-<!--    </header>-->
     <div id="container">
 
-        <div id="map">
-
-            Map goes here...
-        </div>
+        <div id="map">Map goes here...</div>
         <div id="clockWidget">
             <div id="w-container">
                 <script src="/static/clockWidget.js"></script>
@@ -158,8 +186,6 @@
                     <div id="clock-date"></div>
                 </div>
 
-
-
                 <script>
                     // directory where weather gifs are stored
                     var gifsPath = "{{ url_for('static', filename='weather_gifs/') }}";
@@ -173,8 +199,12 @@
                 </script>
                 <h3>Select your route:</h3>
                 <div id="tofrom">
-                    <select id="from"><option>Choose starting point or click map</option></select>
-                    <select id="to"><option>Choose destination</option></select>
+                    <select id="from">
+                        <option>Choose starting point</option>
+                    </select>
+                    <select id="to">
+                        <option>Choose destination</option>
+                    </select>
                 </div>
                 <button type="button" onclick="buildURL()">Lets go!</button>
             </div>
@@ -182,11 +212,6 @@
 
         </div>
     </div>
-<!--    <footer>-->
-<!--        <div class="container">-->
-<!--            <h5>Team 14</h5>-->
-<!--        </div>-->
-<!--    </footer>-->
     <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5ydZwuT-hJt9fmBA5_sHnIWeE3JgvjCY&callback=initMap"  async defer ></script>
 </body>
 
